thodi hi hua abhi to

--- a/index.html
+++ b/index.html
@@ -35,19 +35,45 @@
 
      <div class="container1">
         <div>
-           <span><p class="a2">All</p></span> 
+           <span><p class="a2"><a href="https://www.amazon.com/ " class="a12" label="All">All</a></p></span> 
         </div>
         <div>
-            <span><p class="a2">Today Deals</p></span>
+            <span><p class="a2"> <a href="https://www.amazon.com/gp/goldbox?ref_=nav_cs_gb&discounts-widget=%2522%257B%255C%2522state%255C%2522%253A%257B%255C%2522refinementFilters%255C%2522%253A%257B%257D%257D%252C%255C%2522version%255C%2522%253A1%257D%2522" class="a12" label="Today Deals">Today Deals</a></p></span>
         </div>
-        <div><span><p class="a2">Customer Service</p></span></div>
-        <div><span><p class="a2">Registry</p></span></div>
-        <div><span><p class="a2">Gift Cards</p></span></div>
-        <div><span><p class="a2">Sell</p></span></div>
+        <div><span><p class="a2"> <a href="https://www.amazon.com/gp/help/customer/display.html?nodeId=508510&ref_=nav_cs_customerservice" class="a12" label="Customer Service">Customer Service</a></p></span></div>
+        <div><span><p class="a2"> <a href="https://www.amazon.com/registries?ref_=nav_cs_registry&ref_=nav_cs_registry" class="a12" label="Registry">Registry</a></p></span></div>
+        <div><span><p class="a2"> <a href="https://www.amazon.com/gift-cards/b/?ie=UTF8&node=2238192011&ref_=nav_cs_gc"  class="a12" label="Gift Cards">Gift Cards</a></p></span></div>
+        <div><span><p class="a2"><a href="https://www.amazon.com/b/?_encoding=UTF8&ld=AZUSSOA-sell&node=12766669011&ref_=nav_cs_sell"  class="a12" label="sell">Sell</a></p></span></div>
         <div></div>
      </div>
      <div class="container2">
         <div><img id="b"src="./61lwJy4B8PL._SX3000_.jpg" alt=""></div>
+     </div>
+
+     <div class="container3">
+          <div>
+            <p id="a11">You are on amazon.com. You can also shop on Amazon India
+                for millions of products with fast local delivery. 
+               <a href="https://www.amazon.in/?ref=aisgw_intl_stripe_in">Click here to go to amazon.in</a></p>
+          </div>
+     </div>
+
+     <div class="container4">
+       <div class="ab">
+         <h1 id="h">Refresh your space</h1>
+         <div><img class="img" src="./DesktopQuadCat_186x116_LP-HP_B08MYX5Q2W_01.23._SY116_CB619238939_.jpg" alt=""> </div>
+         <div><img class="img" src="./1.jpg" alt=""></div>
+         <div><img class="img" src="./2.jpg" alt=""></div>
+         <div><img class="img" src="./3.jpg" alt=""></div>
+       </div>
+
+       <div></div>
+       <div></div>
+       <div></div>
+       <div></div>
+       <div></div>
+       <div></div>
+       <div></div>
      </div>
 
     
