--- a/index.html
+++ b/index.html
@@ -60,20 +60,55 @@
 
      <div class="container4">
        <div class="ab">
-         <h1 id="h">Refresh your space</h1>
+         <h1 class="h">Refresh your space</h1>
          <div><img class="img" src="./DesktopQuadCat_186x116_LP-HP_B08MYX5Q2W_01.23._SY116_CB619238939_.jpg" alt=""> </div>
          <div><img class="img" src="./1.jpg" alt=""></div>
          <div><img class="img" src="./2.jpg" alt=""></div>
          <div><img class="img" src="./3.jpg" alt=""></div>
        </div>
 
-       <div></div>
-       <div></div>
-       <div></div>
-       <div></div>
-       <div></div>
-       <div></div>
-       <div></div>
+       <div class="ab">
+         <h1 class="h">Gaming accessories</h1>
+         <div><img class="img" src="./5.jpg" alt=""></div>
+         <div><img  class="img"src="./6.jpg" alt=""></div>
+         <div> <img class="img" src="./7.jpg" alt=""></div>
+         <div><img  class="img"src="./8.jpg" alt=""></div>
+       </div>
+       
+       <div class="ab1">
+         <h1 class="h1">Deals in PCs</h1>
+         <div><img class="img" src="./4.jpg" alt=""></div></div>
+
+       <div class="ab">
+         <h1 class="h">Shop deals in Fashion</h1>
+         <div><img class="img" src="./9.jpg" alt=""></div>
+         <div><img class="img" src="./10.jpg" alt=""></div>
+         <div><img class="img" src="./11.jpg" alt=""></div>
+         <div><img class="img" src="./12.jpg" alt=""></div>
+       </div>
+
+       <div class="ab">
+         <h1 class="h">Amazon Gadget Store</h1>
+         <div><img  class="img" src="./13.jpg" alt=""></div>
+         <div><img  class="img" src="./14.jpg" alt=""></div>
+         <div><img class="img" src="./15.jpg" alt=""></div>
+         <div><img class="img" src="./16.jpg" alt=""></div>
+       </div>
+       <div class="ab1">
+         <h1 class="h1">Toys under $25</h1>
+         <div><img class="img" src="./17.jpg" alt=""></div>
+       </div>
+       <div class="ab">
+         <h1 class="h">Fashion trends you like</h1>
+         <div><img class="img" src="./18.jpg" alt=""></div>
+         <div><img class="img" src="./19.jpg" alt=""></div>
+         <div><img class="img" src="./20.jpg" alt=""></div>
+         <div><img class="img" src="./21.jpg" alt=""></div>
+       </div>
+       <div class="ab1">
+         <h1 class="h1">Home décor under $50</h1>
+         <div><img class="img" src="./22.jpg" alt=""></div>
+       </div>
      </div>
 
     
